fix(SHS-6416): vertical linked card title color contrast in private collection warbler

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/preview/_preview.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/preview/_preview.scss
@@ -137,6 +137,11 @@
     background-color: transparent;
     font-weight: 400;
   }
+
+  .hb-vertical-linked-card {
+    --link-base-current-color: var(--palette--white);
+    --link-base-hover-current-color: var(--palette--white);
+  }
 }
 
 .hb-raised-cards--uniform-height
